[package]
name = "pang-streaming-server"
version = "0.1.0"
edition = "2024"

[dependencies]
scuffle-rtmp = "0.2.3"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.6"
axum = "0.8.4"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
hyper = "1.7.0"
tokio-util = { version = "0.7.16", features = ["full"]}
http-body-util = "0.1.3"
reqwest = { version = "0.12.23", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
